<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/moviesFragment"
        android:title="@string/movies"
        android:icon="@drawable/ic_movies" />
    <item
        android:id="@+id/tvShowFragment"
        android:title="@string/tvShow"
        android:icon="@drawable/ic_tv_show" />
    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite" />
</menu>